# fastapi-prisma-test

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
prisma/: partial_types.py  schema.prisma
prisma/migrations/20221121204217_init/: migration.sql
src/: main.py
src/api/: __init__.py  user.py
src/auth/: api.py  deps.py  utils.py
src/db/: user.py
src/utils/: prisma.py
